# pkgcraft-c

./: Cargo.toml  README.md  cbindgen.toml
.github/workflows/: ci.yml
assets/capi/include/: pkgcraft_manual.h
src/: atom.rs  bash.rs  config.rs  eapi.rs  error.rs  free.rs  lib.rs  macros.rs  parse.rs  pkg.rs  repo.rs  restrict.rs  version.rs
src/atom/: version.rs
src/bash/: has.rs  ver_cut.rs  ver_rs.rs  ver_test.rs
src/pkg/: ebuild.rs
src/repo/: ebuild.rs
tests/: atom.c  atom_cmp.c  meson.build
