[package]
name = "pkgcraft-c"
version = "0.0.1"
description = "C bindings for pkgcraft"
authors = ["Tim Harder <radhermit@gmail.com>"]
homepage = "https://github.com/pkgcraft/pkgcraft-c"
repository = "https://github.com/pkgcraft/pkgcraft-c"
readme = "README.md"
license = "MIT"
edition = "2021"
rust-version = "1.58"
autotests = false

[lib]
name = "pkgcraft"
crate-type = ["cdylib"]

[features]
capi = []

[dependencies]
pkgcraft = { path = "../pkgcraft", version = "0.0.2" }
tracing = "0.1"
